--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,4 +1,4 @@
-htnml {
+html {
   font-size: 62.5%;
 }
 
@@ -11,18 +11,19 @@ htnml {
 }
 
 
-base {
+body {
   font-family: $font-encode;
   font-weight: 400;
   color: $color-gray-4D;
 }
 
-.app-wrapper {
+.layout-grid {
   width: 100vw;
   height: 100vh;
+
   display: grid;
   grid-template-rows: [page-s header-s] 13.6rem [header-e bar-s] 4rem [bar-e content-s] 1fr [content-e page-e];
-  grid-template-columns: [page-s] 14rem [content-s] 1fr [content-e] 14rem [page-e];
+  grid-template-columns: [page-s] 14rem [content-s] 1fr [content-e] 14rem [page-e]
 }
 
 .bar {
