formed title component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,10 @@
 
 @import 'variables';
 @import 'base';
-@import 'header-wrapper';
+@import 'header';
+
+//aith
 @import 'signin';
 @import 'signup';
+
+@import 'form-title'
