added callback to tabnav to handle clicking a tab

--- a/src/style/tab-nav.scss
+++ b/src/style/tab-nav.scss
@@ -24,6 +24,8 @@
     font-weight: 500;
     line-height: 2rem;
     text-align: center;
-    width: 9rem;  
+    width: 9rem;
+    // padding-bottom: 2rem;
+    // border-bottom: 1px solid $color-red-BA; 
   }
 }
