--- a/src/style/newsletter-latest.scss
+++ b/src/style/newsletter-latest.scss
@@ -6,6 +6,8 @@
   display: grid;
   grid-template-rows: [s] 258px [m] 405px [e];
   grid-template-columns: [s] 1fr [e];
+  border: 1px solid $color-gray-E6;
+  border-radius: 0.5rem;
   
 
   & > * {
@@ -20,6 +22,11 @@
   &__title {
     grid-row: s/m;
     justify-items: center;
+    color: white;
+    font-size: 4rem;
+    font-weight: 500;
+    line-height: 5rem;
+    text-align: center;
   }
 
   &__image {
@@ -32,6 +39,10 @@
   &__body {
     grid-row: m/e;
     p{
+      margin: 6.3rem 6.05rem;
+      line-height: 2.2rem;
+      font-size: 1.6rem;
+
 
     }
   }
