--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -54,6 +54,23 @@
 
 // BUTTON
 
+.form-button,
+.form-button-small{
+  &__button {
+    transition: all .2 ease;
+    &:focus {
+      outline: none;
+      
+    }
+
+    &:active {
+      transform: scale(0.95) translateY(2.05px);
+    }
+    
+  }
+ 
+}
+
 .form-button {
     &__button {
         height: 4rem;
