--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -129,6 +129,7 @@
         height: 13.7rem;
         background-color: rgb(218, 218, 218);
         grid-row: image-s/image-e;
+        object-fit: cover;
     }
     &__replace{
         border-radius: 1.6rem;
