--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,6 +24,7 @@
 @import 'newsletter-latest';
 @import 'newsletter-new';
 @import 'newsletter-new-form';
+@import 'newsletter-detail';
 
 @import 'button';
 
