--- a/src/style/requests-box.scss
+++ b/src/style/requests-box.scss
@@ -1,3 +1,5 @@
+
+
 .requests-box {
 
   align-content: center;
@@ -46,4 +48,46 @@
     border-bottom: none;
     border-left: none;
   }
+}
+
+.requests-box-active {
+  background-color: $color-red-BA;
+  border-color: $color-red-BA;
+
+  color: white;
+  
+
+  .requests-box {
+
+    &__title,
+    __count {
+      color: white;
+    }
+
+    
+
+    &__point {
+      background-color: $color-red-BA;
+    border-color: $color-red-BA;
+    }
+  }
+
+}
+
+.requests-box-inactive {
+  border-color: $color-gray-E6;
+
+  .requests-box{
+  &__title,
+  __count {
+    color: $color-gray-4D;
+  }
+
+  
+
+  &__point {
+    display: none;
+  }
+}
+
 }
