cleaned up request item grid

--- a/src/style/requests-item.scss
+++ b/src/style/requests-item.scss
@@ -11,10 +11,15 @@
     justify-self: center;
   }
   &__title {
+    align-self: end;
     grid-column: title-s/title-e;
     grid-row: title-s/title-e;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
   }
   &__tenant-unit {
+    align-self: start;
     grid-column: title-s/title-e;
     grid-row: tenant-s/tenant-e;
   }
@@ -52,9 +57,17 @@
     font-size: 3rem;
   }
   &__title {
-    font-size: 1.8rem;
-    font-weight: 500;
-    line-height: 2.3rem;
+    &__text {
+      font-size: 1.8rem;
+      font-weight: 500;
+      line-height: 2.3rem;
+      margin-right: 2.5rem;
+    }
+
+    &__arrow {
+      color: $color-gray-4D;
+      font-size: 2rem;
+    }
   }
   &__tenant-unit {
     color: $color-red-BA;
@@ -62,10 +75,7 @@
     font-size: 1.3rem;
     line-height: 1.6rem;
   }
-  &__arrow {
-    color: $color-gray-4D;
-    font-size: 2rem;
-  }
+
   &__date {
     font-size: 1.4rem;
     line-height: 1.7rem;
