--- a/src/style/requests-item.scss
+++ b/src/style/requests-item.scss
@@ -35,7 +35,7 @@
   &__move {
     grid-column: date-s/date-e;
     grid-row: s/e;
-    display: none;
+    justify-self: end;
   }
   &__description {
     grid-column: s/e;
@@ -47,7 +47,13 @@
   }
 }
 
+.bg-F8 {
+  background-color: #f8f8f8;
+}
+
 .requests-item {
+  transition: all 0.3s ease;
+
   &__icon {
     font-size: 2.7rem;
   }
@@ -72,8 +78,12 @@
   &__date {
     font-size: 1.4rem;
     line-height: 1.7rem;
+    transition: all 0.3s ease;
   }
   &__move {
+    transition: all 0.3s ease;
+    transform: translateX(100px);
+    opacity: 0;
   }
   .item-description {
     margin-top: 1.4rem;
@@ -84,6 +94,18 @@
     &__text {
       font-size: 1.4rem;
       line-height: 1.7rem;
+    }
+  }
+
+  &:hover {
+    background-color: #f8f8f8;
+
+    .requests-item__move {
+      transform: translateX(0);
+      opacity: 1 !important;
+    }
+    .requests-item__date {
+      transform: translateX(-100px);
     }
   }
 }
