--- a/src/style/newsletter-latest.scss
+++ b/src/style/newsletter-latest.scss
@@ -8,7 +8,6 @@
   grid-template-columns: [s] 1fr [e];
   border: 1px solid $color-gray-E6;
   border-radius: 0.5rem;
-  
 
   & > * {
     grid-column: s/e;
@@ -32,18 +31,17 @@
   &__image {
     grid-row: s/m;
     z-index: -10;
-    
-
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__body {
     grid-row: m/e;
-    p{
+    p {
       margin: 6.3rem 6.05rem;
       line-height: 2.2rem;
       font-size: 1.6rem;
-
-
     }
   }
 
@@ -55,7 +53,5 @@
 
     margin-right: 1rem;
     margin-bottom: 1.2rem;
-
-
   }
 }
