--- a/src/style/requests-item.scss
+++ b/src/style/requests-item.scss
@@ -14,18 +14,15 @@
     align-self: end;
     grid-column: title-s/title-e;
     grid-row: title-s/title-e;
+
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: flex-end;
   }
   &__tenant-unit {
     align-self: start;
     grid-column: title-s/title-e;
     grid-row: tenant-s/tenant-e;
-  }
-  &__arrow {
-    grid-column: arrow-s/arrow-e;
-    grid-row: title-s/title-e;
   }
   &__date {
     grid-column: date-s/date-e;
@@ -44,6 +41,8 @@
     display: grid;
     grid-column-gap: 4rem;
     grid-auto-flow: column;
+    grid-template-columns: [image-s] 150px [image-e] 1fr;
+    grid-template-rows: 100px;
   }
 }
 
@@ -76,9 +75,9 @@
     line-height: 1.6rem;
   }
   &__date {
+    transition: all 0.3s ease;
     font-size: 1.4rem;
     line-height: 1.7rem;
-    transition: all 0.3s ease;
   }
   &__move {
     transition: all 0.3s ease;
@@ -89,7 +88,10 @@
     margin-top: 1.4rem;
     margin-bottom: 2.2rem;
     &__img {
+      grid-column: image-s/image-e;
       object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
     &__text {
       font-size: 1.4rem;
@@ -99,13 +101,12 @@
 
   &:hover {
     background-color: #f8f8f8;
-
     .requests-item__move {
       transform: translateX(0);
-      opacity: 1 !important;
+      opacity: 1;
     }
     .requests-item__date {
-      transform: translateX(-100px);
+      transform: translate(-100px);
     }
   }
 }
